Uso de DOM y de Evento

--- a/productos.html
+++ b/productos.html
@@ -48,7 +48,7 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="agregarAlCarrito('Alegrias', 20)" class="item__btn">
+                    <button onclick="agregarAlCarrito('Alegrias', 20)" id="btnPrincipal" class="item__btn">
                         Comprar
                     </button>
                 </div>
